Avanzando el proyecto

--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@
 
     <section class="content">
 
-      <div class="content-header text">
+      <div class="content-header">
         <h2>Build The Community</h2>
         <h2>Your Fans Will Love</h2>
       </div>
 
-      <div class="content-body text">
+      <div class="content-body">
         <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion.</p>
       </div>
 
-      <div class="button">
-        <a href="#">Register</a>
+      <div class="button-content">
+        <a class="button" href="#">Register</a>
       </div>
 
     </section>
